--- a/admin/src/app/cart/components/cart/cart.component.html
+++ b/admin/src/app/cart/components/cart/cart.component.html
@@ -31,7 +31,7 @@
         <td>{{item.products.length}}</td>
 
         <td>
-          <button class="btn btn-danger mx-2" (click)="deleteCart(item.id)" >Delete</button>
+          <button class="btn btn-danger m-2" (click)="deleteCart(item.id)" >Delete</button>
           <button class="btn btn-primary" (click)="view(index)">View</button>
         </td>
       </tr>
