--- a/admin/src/app/products/components/all-products/all-products.component.html
+++ b/admin/src/app/products/components/all-products/all-products.component.html
@@ -1,4 +1,4 @@
-<div class="box mt-5 cartBox">
+<!-- <div class="box mt-5 cartBox">
   <button type="button" class="btn btn-success mt-2" (click)="openDialog()">Add Product</button>
   <table class="table table-striped">
       <thead>
@@ -56,5 +56,67 @@
     </form>
   </div>
   </div>
-</ng-template>
+</ng-template> -->
 
+<div class="box mt-5 cartBox">
+    <button type="button" class="btn btn-success mt-2" (click)="openDialog()">Add Product</button>
+    <div class="table-responsive"> <!-- Add a responsive wrapper around the table -->
+      <table class="table table-striped">
+        <thead>
+          <tr class="text-center">
+            <th></th>
+            <th>Name</th>
+            <th>Category</th>
+            <th>Price</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of products; let i = index">
+            <td><img src="{{item.image}}" alt=""></td>
+            <td>{{item.title}}</td>
+            <td>{{item.category}}</td>
+            <td>{{item.price}} L.E</td>
+            <td><button type="button" class="btn btn-warning" (click)="update(item)">Update</button></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  
+  <ng-template #modal>
+    <div class="container mb-2">
+      <h5 mat-dialog-title class="headCart pt-3 mx-2">Product Info</h5>
+      <div mat-dialog-content>
+        <form [formGroup]="form">
+          <div class="row">
+            <div class="col-lg-4 col-md-6 col-sm-12"> <!-- Adjust column widths based on screen size -->
+              <label for="">Title</label>
+              <input type="text" formControlName="title" class="form-control" placeholder="Title">
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <label for="">Price</label>
+              <input type="number" formControlName="price" class="form-control" placeholder="Price">
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <app-select [data]="categories" [title]="'Categories'" [all]="false" [select]="form.value.category" (selectedValue)="getSelectedCategory($event)"></app-select>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <label for="image">Image</label>
+              <img src="{{base64}}" alt="">
+              <input type="file" class="form-control" (change)="getImagePath($event)">
+            </div>
+            <div class="col-lg-8 col-md-12 col-sm-12"> <!-- Adjust column widths based on screen size -->
+              <label for="image">Description</label>
+              <textarea class="form-control" formControlName="description" placeholder="Type here..."></textarea>
+            </div>
+          </div>
+          <div mat-dialog-actions class="d-flex justify-content-end mt-3">
+            <button class="btn btn-success mx-2" [disabled]="!form.valid" (click)="addProduct()">Add</button>
+            <button class="btn btn-secondary" (click)="closeDialog()">Close</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </ng-template>
+  
