--- a/store/src/app/carts/components/cart/cart.component.html
+++ b/store/src/app/carts/components/cart/cart.component.html
@@ -4,46 +4,47 @@
     <p class="lead">You have <label class="text-danger"> {{cartProducts.length}} </label> items in your cart</p>
     <button class="text-danger card-header" (click)="clearCart()">Clear Cart</button>
   </div>
-  <table class="table table-striped">
-    <thead>
-      <tr>
-        <th></th>
-        <th>Name</th>
-        <th>Price</th>
-        <th style="width: 25%; text-align: center;">Quantity</th>
-        <th>Total</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let item of cartProducts; let index = index">
-        <td><img src="{{item.item.image}}" alt=""></td>
-        <td>{{item.item.title}}</td>
-        <td>{{item.item.price}}</td>
-        <td>
-          <div class="quantity">
-            <button class="btn btn-dark" (click)= "addAmount(index)">+</button>
-            <input type="number" class="form-control" (change)="detectChange()" [(ngModel)]="item.quantity" min="1">
-            <button class="btn btn-danger" (click)= "minsAmount(index)">-</button>
-          </div>
-        </td>
-        <td>{{item.item.price * item.quantity}} L.E</td>
-        <td>
-          <button class="btn btn-danger" (click)="deletProduct(index)">Delete</button>
-        </td>
-      </tr>
-    </tbody>
-    <tfoot>
-      <tr>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th>Total: {{ total | number:'1.0-2' }} L.E</th>
-        <th><button class="btn btn-success" (click)="order()">Order Now</button></th>
-      </tr>
-    </tfoot>
-  </table>
-
+  <div class="table-responsive">
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th></th>
+          <th>Name</th>
+          <th>Price</th>
+          <th style="width: 25%; text-align: center;">Quantity</th>
+          <th>Total</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let item of cartProducts; let index = index">
+          <td><img src="{{item.item.image}}" alt=""></td>
+          <td>{{item.item.title}}</td>
+          <td>{{item.item.price}}</td>
+          <td>
+            <div class="quantity">
+              <button class="btn btn-dark" (click)= "addAmount(index)">+</button>
+              <input type="number" class="form-control" (change)="detectChange()" [(ngModel)]="item.quantity" min="1">
+              <button class="btn btn-danger" (click)= "minsAmount(index)">-</button>
+            </div>
+          </td>
+          <td>{{item.item.price * item.quantity}} L.E</td>
+          <td>
+            <button class="btn btn-danger" (click)="deletProduct(index)">Delete</button>
+          </td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <th></th>
+          <th></th>
+          <th></th>
+          <th></th>
+          <th>Total: {{ total | number:'1.0-2' }} L.E</th>
+          <th><button class="btn btn-success" (click)="order()">Order Now</button></th>
+        </tr>
+      </tfoot>
+    </table>
+  </div>
 </div>
 <div class="alert alert-success" role="alert" *ngIf="success"><strong>Well Done!</strong> Your Order Is Successfully Done</div>
