--- a/store/src/app/products/components/all-products/all-products.component.html
+++ b/store/src/app/products/components/all-products/all-products.component.html
@@ -1,10 +1,13 @@
 <div class="box mt-5">
-    <div class="my-2 w-25">
-      <app-select [data]="categories" [title]="'Categories'" (selectedValue)="filterCategory($event)"></app-select>
-    </div>
-    <div class="row" *ngIf="!loading">
-      <div class="col-md-3 col-sm-12" *ngFor="let item of products">
-         <app-product [data]="item" (item)="addToCart($event)"></app-product>
+  <div class="my-2">
+    <app-select [data]="categories" [title]="'Categories'" (selectedValue)="filterCategory($event)"></app-select>
+  </div>
+  <div class="d-flex justify-content-center" style="overflow-x: hidden;">
+    <div class="row">
+      <div class="col-lg-3 col-md-4 col-sm-6" *ngFor="let item of products">
+        <app-product [data]="item" (item)="addToCart($event)"></app-product>
       </div>
     </div>
+  </div>
 </div>
+
