--- a/store/src/app/shared/components/header/header.component.scss
+++ b/store/src/app/shared/components/header/header.component.scss
@@ -1,23 +1,35 @@
 nav {
   background: linear-gradient(to right, #950b0b, #440606);
   color: #fff;
-  .content{
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 0;
-    ul{
-      list-style: none;
+
+  .container {
+    padding: 10px;
+
+    .content {
       display: flex;
       justify-content: space-between;
-      width: 22%;
-      margin: 0;
-      li{
-        cursor: pointer;
-        font-size: 22px;
-        color: #fff;
-        text-decoration: none;
-        margin-right: 10px;
+      align-items: center;
+
+      .logo {
+        font-size: 1.5rem;
+        margin-right: auto;
+      }
+
+      ul {
+        list-style: none;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        margin: 0;
+        padding: 0;
+
+        li {
+          cursor: pointer;
+          font-size: 22px;
+          color: #fff;
+          text-decoration: none;
+          margin-left: 10px;
+        }
       }
     }
   }
