--- a/store/src/app/products/components/product/product.component.scss
+++ b/store/src/app/products/components/product/product.component.scss
@@ -9,6 +9,7 @@
   transition: all 0.3s ease-in-out;
   img {
     width: 100%;
+    object-fit: contain;
     height: 200px;
     border-radius: 10px;
   }
