--- a/admin/src/app/shared/components/header/header.component.html
+++ b/admin/src/app/shared/components/header/header.component.html
@@ -1,10 +1,10 @@
 <nav >
   <div class="container">
     <div class="content">
-      <h2 class="logo">Admin-Market</h2>
+      <h2 routerLink="/cart" class="logo">Admin-Market</h2>
       <ul>
         <li routerLink="/products">Products</li>
-        <li routerLink="/cart">Cart</li>
+        <li routerLink="/cart">Orders</li>
       </ul>
     </div>
   </div>
